--- a/_posts/2019-01-15-tea.md
+++ b/_posts/2019-01-15-tea.md
@@ -8,6 +8,7 @@ comments: true
 
 ![cc](/public/cc.png) Also published on [S&C](https://soandcandy.us)
 
+> He taught me about tea and everything.
 ----
 
 
@@ -32,14 +33,14 @@ comments: true
 
 #### 曰：「茶若好茶，水需好水。」
 
-陸羽茶經亦曾論水，山爲上、江次之、井下也，次第二十種，廬山康王谷水、無錫惠山石泉云云。劉伯芻<sup>注2</sup>卻認爲，揚子江第一。現今不過礦泉水、純淨水、自來水爾爾。
+陸羽茶經亦曾論水，山爲上、江次之、井下也，次第二十種，廬山康王谷水、無錫惠山石泉云云。劉伯芻<sup>注1</sup>卻認爲，揚子江第一。現今不過礦泉水、純淨水、自來水爾爾。
 
 茶若好茶，水需好水。
 
 美利堅茶源緊缺，麋鹿市水味有惡。茶，我所慾也；水，亦我所慾也。不可得矣。
 
 
-注2：芻，chu陽平，粵語`co1`,音`初`。
+注1：芻，chu陽平，粵語`co1`,音`初`。
 
 
 #### 曰：「茶三酒四踢桃二。」
