--- a/_posts/2019-05-16-NAS-FQA.md
+++ b/_posts/2019-05-16-NAS-FQA.md
@@ -7,11 +7,11 @@ comments: true
 
 ![cc](/public/cc.png) Also published on [S&C](https://soandcandy.us)
 
-1. May I use my own HDD for NAS?
+#### 1. May I use my own HDD for NAS? ####
 
 Sure you can but **I won't suggest that.** You should use dedicated storages for NAS, WD RED for example. They are designed for 7*24 working environment.
 
-2. What is SAS? Should I use them?
+#### 2. What is SAS? Should I use them? ####
 
 You may know SATA. Your PC hard drive is using this computer bus interface. SAS is short for Serial Attached SCSI, and is a point-to-point serial protocol that moves data to and from computer-storage devices. 
 
@@ -23,25 +23,25 @@ In my building list, I suggest to use motherboard [GA-7PESH2](https://www.gigaby
 
 SAS hard drive is also designed for 7*24 working environment. It has higher performance than normal SATA hard drive. BUT, usually it has **less capacity** than SATA hard drive. If you decide to use SAS drives, I suggest you choose 10k or 15k RPM.
 
-3. GA-7PESH2 has only 2 SATA port. How could I use more HDDs?
+#### 3. GA-7PESH2 has only 2 SATA port. How could I use more HDDs? ####
 
 You will need [SFF-8087 to SATA](https://www.amazon.com/gp/product/B013G4EOEY) cable or [SFF-8087 to SFF-8482](https://www.amazon.com/gp/product/B013G4FEGG) to connect your additional HDDs or SSDs, with SATA or SAS drive.
 
 Also, you could use [HP PCI-e SAS Expander Card](https://www.amazon.com/gp/product/B00Z9AMKOA). This is the easiest way to support 24 drives with this motherboard. Plug in two [male-male 8087 cables](https://www.amazon.com/gp/product/B017CO6L8Q) from the SAS expander to the onboard SAS, the plug all of your SAS breakout cables into the SAS expander. No additional software needed.
 
-4. What is SFF-8087, SFF-8482?
+#### 4. What is SFF-8087, SFF-8482? ####
 
 They are all SAS connectors. You could check the difference in [wikipedia](https://en.wikipedia.org/wiki/Serial_Attached_SCSI).
 
 Normally you use SFF-8087 connect to your motherboard, or your SAS card. And use SFF-8482 connect to your Hard drive, SAS or SATA.
 
-5. How many RAM should I use?
+#### 5. How many RAM should I use? ####
 
 The more, the better. If you use FreeNAS, 8G is the basic requirement. When you add 1T storage to your server, you should add 1G RAM, too.
 
 BTW, you should use ECC server RAM. They are designed for 7*24, too.
 
-6. Error when I install plugins on FreeNAS.
+#### 6. Error when I install plugins on FreeNAS. ####
 
 Delete your iocage dataset, and then install again. **Don't delete your other dataset!**
 
